Leaderboard Search, Fixed scrollbars

--- a/build-env/assets/static/css/modern.css
+++ b/build-env/assets/static/css/modern.css
@@ -398,7 +398,16 @@ select {
   color-scheme: dark;
   background: rgba(255,255,255,.05)!important;
   color: var(--text)!important;
-  border: 1px solid rgba(255,255,255,.15)!important
+  border: 1px solid rgba(255,255,255,.15)!important;
+  scrollbar-color: rgba(0,0,0,.4) transparent;
+}
+.select select::-webkit-scrollbar-thumb,
+select::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,.3)!important;
+}
+.select select::-webkit-scrollbar-thumb:hover,
+select::-webkit-scrollbar-thumb:hover {
+  background: rgba(0,0,0,.5)!important;
 }
 .select select option,
 select option {
